initial transform to resemble other tcpl connectors

--- a/events/package.json
+++ b/events/package.json
@@ -5,12 +5,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node build/index.js",
-    "gcp-build": "tsc",
-    "start:dev": "concurrently -k \"tsc --watch\" \"nodemon -q build/index.js\"",
-    "build": "rimraf ./build && tsc",
-    "lint": "eslint . --ext .ts",
-    "prettier": "prettier --write '**/*.{js,ts}'",
+    "start": "tsc && node build/index.js",
+    "dev": "tsx --watch --conditions=development src/index.ts",
+    "build": "yarn --cwd ../common install && yarn --cwd ../common run build && rimraf ./build && tsc",
+    "lint": "prettier --check 'src/**/*.{js,ts}' && eslint .",
+    "format": "prettier --write '**/*.{js,ts}'",
     "test": "jest --config jest.config.mjs",
     "test:watch": "jest --watch",
     "connector:post-deploy": "node build/connector/post-deploy.js",
