even more simplification

--- a/events/.env.example
+++ b/events/.env.example
@@ -2,7 +2,6 @@ CTP_CLIENT_ID=
 CTP_CLIENT_SECRET=
 CTP_PROJECT_KEY=
 CTP_SCOPE=
-CTP_REGION=europe-west1.gcp
 
 CT_API_URL=https://api.europe-west1.gcp.commercetools.com
 CT_AUTH_URL=https://auth.europe-west1.gcp.commercetools.com
@@ -11,5 +10,5 @@ CT_AUTH_URL=https://auth.europe-west1.gcp.commercetools.com
 SENDGRID_API_KEY=
 
 # Variable for OpenTelemetry logging (Optional)
-OTEL_EXPORTER_OTLP_ENDPOINT=
-OTEL_EXPORTER_OTLP_ENDPOINT_API_KEY=
+# OTEL_EXPORTER_OTLP_ENDPOINT=
+# OTEL_EXPORTER_OTLP_ENDPOINT_API_KEY=
