--- a/events/package.json
+++ b/events/package.json
@@ -8,7 +8,7 @@
     "postinstall": "cd .. && husky ./events/.husky",
     "start": "tsc && node build/index.js",
     "dev": "tsx --watch --conditions=development src/index.ts",
-    "build": "yarn --cwd ../common install && yarn --cwd ../common run build && rimraf ./build && tsc",
+    "build": "yarn rimraf ./build && tsc",
     "lint": "prettier --check 'src/**/*.{js,ts}' && eslint .",
     "format": "prettier --write '**/*.{js,ts}'",
     "test": "jest --config jest.config.mjs",
