increasing test coverage

--- a/events/package.json
+++ b/events/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write '**/*.{js,ts}'",
     "test": "jest ./src --config jest.config.mjs",
     "test:watch": "jest ./src --watch",
+    "test:coverage": "jest ./src --config jest.config.mjs --coverage --collectCoverageFrom='src/**/*.ts'",
     "connector:post-deploy": "node build/connector/post-deploy.js",
     "connector:pre-undeploy": "node build/connector/pre-undeploy.js"
   },
