--- a/events/package.json
+++ b/events/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "postinstall": "cd .. && husky ./events/.husky",
     "start": "tsc && node build/index.js",
+    "gcp-build": "tsc",
     "dev": "tsx --watch --conditions=development src/index.ts",
-    "build": "yarn rimraf ./build && tsc",
+    "build": "rimraf ./build && tsc",
     "lint": "prettier --check 'src/**/*.{js,ts}' && eslint .",
     "format": "prettier --write '**/*.{js,ts}'",
     "test": "jest ./src --config jest.config.mjs",
@@ -18,19 +19,19 @@
     "connector:pre-undeploy": "node build/connector/pre-undeploy.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@tsconfig/recommended": "^1.0.3",
+    "@eslint/js": "^9.23.0",
+    "@tsconfig/recommended": "^1.0.8",
     "@types/eslint__js": "^8.42.3",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.0.3",
-    "@types/node": "^22.7.5",
-    "@types/object-mapper": "^6.2.2",
-    "@types/supertest": "^6.0.2",
-    "@types/validator": "^13.7.10",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
+
+    "@types/supertest": "^6.0.3",
+    "@types/validator": "^13.12.3",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "concurrently": "^9.0.1",
-    "eslint": "^9.12.0",
+    "eslint": "^9.23.0",
     "husky": "^9.1.7",
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
@@ -43,23 +44,22 @@
     "typescript-eslint": "^8.9.0"
   },
   "dependencies": {
-    "@commercetools-backend/loggers": "^22.35.0",
-    "@commercetools/platform-sdk": "^7.17.0",
-    "@commercetools/sdk-client-v2": "^2.0.0",
-    "@opentelemetry/api-logs": "^0.55.0",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.55.0",
-    "@opentelemetry/resources": "^1.29.0",
-    "@opentelemetry/sdk-logs": "^0.55.0",
-    "@opentelemetry/winston-transport": "^0.8.0",
+    "@commercetools-backend/loggers": "^23.2.2",
+    "@commercetools/platform-sdk": "^8.7.0",
+    "@commercetools/sdk-client-v2": "^3.0.0",
+    "@opentelemetry/api-logs": "^0.200.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.200.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-logs": "^0.200.0",
+    "@opentelemetry/winston-transport": "^0.11.0",
     "@sendgrid/client": "^8.1.4",
     "@sendgrid/mail": "^8.1.4",
-    "body-parser": "^1.20.2",
-    "decimal.js": "^10.4.3",
-    "dotenv": "^16.3.1",
+    "body-parser": "^2.2.0",
+    "decimal.js": "^10.5.0",
+    "dotenv": "^16.4.7",
     "express": "^5.0.1",
-    "object-mapper": "^6.2.0",
     "ts-retry": "^5.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.15.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
